PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
? ? ??? 200?, Version 5.0.0
- Moved extensions to PECL (http://pear.php.net/): (James, Tal)
  . ext/fribidi
- Fixed dirname() and strip_tags() to be binary-safe. (Moriyoshi)
- Fixed bug #22386 (Using browscap causes segfault). (Jay)
- Fixed bug #22895 (PHP cli outputs errors in text AND html). (Marcus)
- Fixed bug #22059 (ftp_chdir causes segfault). (Sara)
- Fixed bug #21985 and #22064 (various mb_send_mail() issues). (Moriyoshi)
- Fixed bug #21600 (Assign by reference function call changes variable contents).
  (Zeev)
- Fixed bug #21007 (html_errors off text-only output in phpinfo). (Marcus)
- Fixed bug #20442 (upgraded bundled expat to 1.95.5). (Ilia)
- Fixed bug #20155 (xmlrpc compile problem with ZE2). (Derick, Jan Schneider)
- Changed the length parameter in fgetss() to be optional. (Moriyoshi)
- Changed ini parser to allow for handling of quoted multi-line values. (Ilia)
- Changed get_extension_funcs() to return list of the built-in Zend Engine 
  functions if "zend" is specified as the module name. (Ilia)
- Changed is_executable() to be available also on Windows. (Shane)
- Changed array_search() to accept also objects as a needle. (Moriyoshi)
- Changed ext/mcrypt to require libmcrypt version 2.5.6 or greater. (Derick)
- Changed uniqid() parameters to be optional and allow any prefix length. (Marcus)
- Added unlink() method to wrapper operations, routed userland unlink through
  wrappers, and implemented plainfiles and ftp unlink methods. (Sara)
- Added encoding detection feature for expat XML parser. (Adam Dickmeiss, Moriyoshi)
- Added missing multibyte(unicode) support and numeric entity support to
  html_entity_decode(). (Moriyoshi)
- Added opendir() and stat() related support to ftp:// wrapper. (Sara)
- Added IPv6 support to ext/sockets. (Sara)