@@ -108,7 +108,7 @@ PHP_FUNCTION(parse_ini_file);
 
 PHP_FUNCTION(str_rot13);
 PHP_FUNCTION(stream_get_filters);
-PHP_FUNCTION(stream_register_filter);
+PHP_FUNCTION(stream_filter_register);
 PHP_FUNCTION(stream_bucket_make_writeable);
 PHP_FUNCTION(stream_bucket_prepend);
 PHP_FUNCTION(stream_bucket_append);
